# cs5229-2025-pa1

./: .gitignore  README.md
exercises/01-fake_ping/: CMakeLists.txt  Makefile  README.md  fake_ping.c
exercises/01-fake_ping/pod-topo/: topology.json
exercises/01-fake_ping/ptf/: 01-testcases-public.py  02-testcases-hidden.py
exercises/02-dead_drop/: CMakeLists.txt  Makefile  README.md  dead_drop.c  message_dropoff.py  message_pickup.py
exercises/02-dead_drop/pod-topo/: topology.json
exercises/02-dead_drop/ptf/: 01-testcases-public.py  02-testcases-hidden.py
exercises/02-dead_drop/secret_util/: .gitignore  Makefile  secret_util.c
exercises/03-learning_switch/: CMakeLists.txt  Makefile  README.md  learning_switch.c
exercises/03-learning_switch/pod-topo/: topology.json
exercises/03-learning_switch/ptf/: 01-testcases-public.py  02-testcases-hidden.py
exercises/04-simple_l3_router/: CMakeLists.txt  Makefile  README.md  simple_l3_router.c
exercises/04-simple_l3_router/pod-topo/: topology.json
exercises/04-simple_l3_router/ptf/: 01-testcases-public.py  02-testcases-hidden.py
